* Fix Bug #1295889 should recognize file extensions regardless of case (when burning cd/dvd images).
* Apply patch #1311145 Flickering window position restoring.
* Apply patch #1311058 audiocd.c and #1311024 'm3u capable' patch for audiocd.c. GB now imports m3u playlists.
* Apply patch #1313211 .m3u & .pls support - gnomebaker-0.4.2/src/audiocd.c. GB now imports pls playlists.

Version 0.4.2

* Apply patch #1260533 Save Maximized state from Marc Deslauriers
* Character set fix from Jean-François Wauthy
* Fix Bug #1174339 audio cd: confused by files with identical basenames
* Fix Bug #1220712 .bin and .iso burning error/crash
* Fix Bug #1239606 Problems recording bin/cue files in version 0.4
* Fix Bug #1165614 Don't convert correctly Upcase filename
* Fix several memory leak when creating audio cds.
* Fix memory leak when reading from a child process.
* Improve the way we read from GIOChannels.
* Fix 4 identical RFEs 
		#1162821 Reorder Audio Tracks, 
		#1174159 audio cd tracks cannot be ordered, 
		#1219345 NEED to be able to reorder songs on audio CD, 
		#1259112 Feature request: compilation order rearrangement

Version 0.4.1

* Apply Milen's patch so we have a preference setting which determines if we ask on quit.
* Marco Meyerhofer patches (Nearly complete translation in german,  install help-files under /usr/share/gnome/help/, make help appear in yelp under Application/Accessories
* Fix stupid bug with window sizing and not checking arguments.
* Apply patch so that the progress dialogs show output button says hide when the output is showing.
* Use the device node rather than scsi id for burning dvd isos so growisofs works with external burners.
* Fix silly bug where progress dialog does not pulse if media is already inserted.
* Don't prompt for a disk when copying data/audio cds if the disk is already inserted.
* Make sure we unmount read devices and not just writers.
* Fix Bug #1146159 wrong named button